# sina_bot

./: Makefile  app.py  products.csv  pyproject.toml  setup.cfg
bot/: messages.py  poster copy.py  poster.py  registratin.py  review.py  update.py  utils.py  webhooks.py
bot/commands/: start.py
bot/db/: ORM.py  __init__.py  database.py  models.py
bot/keyboards/: builder.py
bot/keyboards/inline_keyboards/: callbacks.py  inline_keyboards.py
bot/keyboards/reply_keyboards/: reply_keyboard_process.py  reply_keyboards.py
bot/tests/: conftest.py  messages.py  test_start.py  utils.py
