[tool.poetry]
name = "sina-bot"
version = "0.1.0"
description = ""
authors = ["AntonLysachev <anton@lysachev.ru>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
